# langfuse-ergonomic

./: .env.example  .gitignore  .gitleaks.toml  AUTOMATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RENOVATE_ANALYSIS.md  WORKFLOW_COMPARISON.md  WORKFLOW_DETAILED_COMPARISON.md  WORKFLOW_TOOLS_COMPARISON.md  deny.toml  release-plz.toml  renovate.json5
.githooks/: pre-commit
.github/: settings.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cargo-deny.yml  ci.yml  release-plz.yml  secrets.yml  security.yml
examples/: advanced_features.rs  basic_trace.rs  batch_ingestion.rs  batch_ingestion_207.rs  comprehensive_batch_test.rs  datasets.rs  http_middleware_retry.rs  multiple_traces.rs  observations.rs  prompts.rs  scores.rs  security_redaction.rs  self_hosted.rs  test_trace.rs  trace_urls_byo_ids.rs  trace_with_metadata.rs  traces_fetch.rs
scripts/: setup-hooks.sh
src/: batcher.rs  client.rs  datasets.rs  error.rs  lib.rs  observations.rs  prompts.rs  scores.rs  security.rs  traces.rs
tests/: batcher_test.rs  batching_test.rs  integration_test.rs  mock_tests.rs  simple_batcher_test.rs  trace_urls_test.rs
