[package]
name = "langfuse-ergonomic"
version = "0.2.1"
edition = "2021"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
license = "MIT OR Apache-2.0"
description = "Ergonomic Rust client for Langfuse with builder patterns"
repository = "https://github.com/genai-rs/langfuse-ergonomic"
homepage = "https://github.com/genai-rs/langfuse-ergonomic"
documentation = "https://docs.rs/langfuse-ergonomic"
readme = "README.md"
keywords = ["langfuse", "observability", "llm", "tracing", "monitoring"]
categories = ["api-bindings", "web-programming::http-client", "development-tools::debugging"]
rust-version = "1.75"

[dependencies]
langfuse-client-base = "0.2"
bon = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
url = "2.5"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
pretty_assertions = "1.4"
mockito = "1.4"

[[example]]
name = "test_trace"
path = "examples/test_trace.rs"

[[example]]
name = "basic_trace"
path = "examples/basic_trace.rs"

[[example]]
name = "trace_with_metadata"
path = "examples/trace_with_metadata.rs"

[[example]]
name = "multiple_traces"
path = "examples/multiple_traces.rs"

[[example]]
name = "observations"
path = "examples/observations.rs"

[[example]]
name = "scores"
path = "examples/scores.rs"

[[example]]
name = "datasets"
path = "examples/datasets.rs"

[[example]]
name = "traces_fetch"
path = "examples/traces_fetch.rs"

[[example]]
name = "prompts"
path = "examples/prompts.rs"

[[example]]
name = "batch_ingestion"
path = "examples/batch_ingestion.rs"

[[example]]
name = "batch_ingestion_207"
path = "examples/batch_ingestion_207.rs"

[[example]]
name = "self_hosted"  
path = "examples/self_hosted.rs"

[[example]]
name = "trace_urls_byo_ids"
path = "examples/trace_urls_byo_ids.rs"


[features]
default = ["rustls"]
rustls = ["langfuse-client-base/rustls"]
native-tls = ["langfuse-client-base/native-tls"]
